fix: max-width to stop layout shift from scrollbar

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -73,6 +73,7 @@ body {
 
 main {
   @apply container;
+  max-width: min(97vw, theme('maxWidth.5xl'));
 }
 
 [x-cloak] {
